code/infrastructure/arm/blueprint/azure-core-foundation/Artifacts/artifact-template-vnet-network.json
{
  "kind": "template",
  "properties": {
    "displayName": "Deploy Virtual Network",
    "description": "Deploys Virtual Network, RouteTables and NSG's.",
    "dependsOn": [],
    "template": {
      "$schema": "https://schema.management.azure.com/schemas/2019-04-01/deploymentTemplate.json#",
      "contentVersion": "1.0.0.1",
      "parameters": {
        "orgTag": {
          "type": "string",
          "metadata": {
            "displayName": "Enter a tag for your organization name (e.g. con), must be unique",
            "description": "Organization Tag"
          },
          "defaultValue": "ORG-TAG"
        },
        "suffix": {
          "type": "string",
          "metadata": {
            "displayName": "Enter a string to be added to the end of all resources. can also be empty string.",
            "description": "Suffix to add to labels."
          },
          "defaultValue": "pcus"
        },
        "location": {
          "type": "string"
        },
        "publicDataEndpointEnabled": {
          "type": "bool",
          "defaultValue": false
        },
        "nsgForPublicEndpoint": {
          "type": "string",
          "defaultValue": "allowFromAzureCloudTo3342NSG"
        },
        "ApplicationName": {
          "defaultValue": "ADAP",
          "type": "string",
          "metadata": {
            "description": "Name of the application, service, or workload the resource is associated with."
          }
        },
        "Approver": {
          "defaultValue": "approver@company.org",
          "type": "string",
          "metadata": {
            "description": "Person responsible for approving costs related to this resource."
          }
        },
        "BudgetAmount": {
          "defaultValue": "0",
          "type": "string",
          "metadata": {
            "description": "Money allocated for this application, service, or workload."
          }
        },
        "BusinessUnit": {
          "defaultValue": "CORP",
          "type": "string",
          "metadata": {
            "description": "Top-level division of your company that owns the subscription or workload the resource belongs to. In smaller organizations, this tag might represent a single corporate or shared top-level organizational element."
          }
        },
        "CostCenter": {
          "defaultValue": "8675-309",
          "type": "string",
          "metadata": {
            "description": "Business criticality of the application, workload, or service."
          }
        },
        "DR": {
          "defaultValue": "Mission-Critical",
          "type": "string",
          "metadata": {
            "description": "Business criticality of the application, workload, or service."
          }
        },
        "EndDate": {
          "defaultValue": "9999-12-31",
          "type": "string",
          "metadata": {
            "description": "Date when the application, workload, or service is scheduled for retirement."
          }
        },
        "Env": {
          "type": "string",
          "metadata": {
            "displayName": "Environment Tag",
            "description": "Select the Azure environment tag: smoke, prod, uat, sandbox, dev, lab"
          },
          "defaultValue": "dev"
        },
        "Owner": {
          "defaultValue": "owner@company.org",
          "type": "string",
          "metadata": {
            "description": "Owner of the application, workload, or service."
          }
        },
        "Requester": {
          "defaultValue": "requester@company.org",
          "type": "string",
          "metadata": {
            "description": "User who requested the creation of this application."
          }
        },
        "ServiceClass": {
          "defaultValue": "Gold",
          "type": "string",
          "metadata": {
            "description": "Service level agreement level of the application, workload, or service."
          }
        },
        "StartDate": {
          "defaultValue": "2020-01-01",
          "type": "string",
          "metadata": {
            "description": "Date when the application, workload, or service was first deployed."
          }
        }
      },
      "variables": {
        "deployment-prefix": "[toLower(concat(parameters('orgTag'), '-adap-', parameters('Env'),'-',parameters('suffix')))]",
        "virtualNetworkName": "[concat('vnet-', variables('deployment-prefix'))]",
        "routeTableName": "[concat('rt-', variables('deployment-prefix'))]",
        "networkSecurityGroupName": "[concat('nsg-', variables('deployment-prefix'))]",
        "addressPrefix": "10.0.0.0/16",
        "sqlmiSubnetName": "[concat('snet-',variables('deployment-prefix'),'-sqlmi')]",
        "sqlmiSubnetPrefix": "10.0.0.0/24",
        "defaultSubnetName": "[concat('snet-',variables('deployment-prefix'),'-default')]",
        "defaultSubnetPrefix": "10.1.0.0/24",
        "locations": [
          "centralus",
          "eastus",
          "eastus2",
          "northcentralus",
          "southcentralus",
          "westcentralus",
          "westus",
          "westus2",
          "canadacentral",
          "canadaeast"
        ],
        "routesJumpboxes": [
          {
            "name": "SqlManagement_deployment",
            "properties": {
              "addressPrefix": "65.55.188.0/24",
              "nextHopType": "Internet"
            }
          }
        ],
        "routesSAW": [
          {
            "name": "SqlManagement_supportability_1",
            "properties": {
              "addressPrefix": "207.68.190.32/27",
              "nextHopType": "Internet"
            }
          },
          {
            "name": "SqlManagement_supportability_2",
            "properties": {
              "addressPrefix": "13.106.78.32/27",
              "nextHopType": "Internet"
            }
          },
          {
            "name": "SqlManagement_supportability_3",
            "properties": {
              "addressPrefix": "13.106.174.32/27",
              "nextHopType": "Internet"
            }
          },
          {
            "name": "SqlManagement_supportability_4",
            "properties": {
              "addressPrefix": "13.106.4.96/27",
              "nextHopType": "Internet"
            }
          }
        ],
        "routesRunners": [
          {
            "name": "SqlManagement_automation_global",
            "properties": {
              "addressPrefix": "104.214.108.80/32",
              "nextHopType": "Internet"
            }
          }
        ],
        "routesDSMS": [
          {
            "name": "SqlManagement_security_global_1",
            "properties": {
              "addressPrefix": "52.179.184.76/32",
              "nextHopType": "Internet"
            }
          },
          {
            "name": "SqlManagement_security_global_2",
            "properties": {
              "addressPrefix": "52.187.116.202/32",
              "nextHopType": "Internet"
            }
          },
          {
            "name": "SqlManagement_security_global_3",
            "properties": {
              "addressPrefix": "52.177.202.6/32",
              "nextHopType": "Internet"
            }
          }
        ],
        "CanadaCentral": {
          "controlPlane": [
            {
              "name": "SqlManagement_controlPlane_primary",
              "properties": {
                "addressPrefix": "52.237.28.86/32",
                "nextHopType": "Internet"
              }
            },
            {
              "name": "SqlManagement_controlPlane_backup1",
              "properties": {
                "addressPrefix": "40.85.224.249/32",
                "nextHopType": "Internet"
              }
            },
            {
              "name": "SqlManagement_controlPlane_backup2",
              "properties": {
                "addressPrefix": "13.88.249.189/32",
                "nextHopType": "Internet"
              }
            },
            {
              "name": "SqlManagement_controlPlane_backup3",
              "properties": {
                "addressPrefix": "20.38.144.32/29",
                "nextHopType": "Internet"
              }
            }
          ],
          "controlPlane_SqlManagementTag": [
            {
              "name": "SqlManagement_controlPlane_az01",
              "properties": {
                "addressPrefix": "104.211.81.160/27",
                "nextHopType": "Internet"
              }
            },
            {
              "name": "SqlManagement_controlPlane_az02",
              "properties": {
                "addressPrefix": "52.167.106.224/27",
                "nextHopType": "Internet"
              }
            },
            {
              "name": "SqlManagement_controlPlane_az03",
              "properties": {
                "addressPrefix": "40.71.13.192/27",
                "nextHopType": "Internet"
              }
            }
          ],
          "runners": [
            {
              "name": "SqlManagement_automation_backup",
              "properties": {
                "addressPrefix": "52.185.145.40/32",
                "nextHopType": "Internet"
              }
            },
            {
              "name": "SqlManagement_automation_primary",
              "properties": {
                "addressPrefix": "52.231.18.160/27",
                "nextHopType": "Internet"
              }
            }
          ]
        },
        "CanadaEast": {
          "controlPlane": [
            {
              "name": "SqlManagement_controlPlane_primary",
              "properties": {
                "addressPrefix": "40.86.226.166/32",
                "nextHopType": "Internet"
              }
            },
            {
              "name": "SqlManagement_controlPlane_backup1",
              "properties": {
                "addressPrefix": "52.229.122.195/32",
                "nextHopType": "Internet"
              }
            },
            {
              "name": "SqlManagement_controlPlane_backup2",
              "properties": {
                "addressPrefix": "52.229.123.147/32",
                "nextHopType": "Internet"
              }
            },
            {
              "name": "SqlManagement_controlPlane_backup3",
              "properties": {
                "addressPrefix": "40.69.105.32/29",
                "nextHopType": "Internet"
              }
            }
          ],
          "controlPlane_SqlManagementTag": [
            {
              "name": "SqlManagement_controlPlane_az01",
              "properties": {
                "addressPrefix": "104.211.146.192/27",
                "nextHopType": "Internet"
              }
            },
            {
              "name": "SqlManagement_controlPlane_az02",
              "properties": {
                "addressPrefix": "52.169.6.70/32",
                "nextHopType": "Internet"
              }
            },
            {
              "name": "SqlManagement_controlPlane_az03",
              "properties": {
                "addressPrefix": "40.70.148.64/27",
                "nextHopType": "Internet"
              }
            }
          ],
          "runners": [
            {
              "name": "SqlManagement_automation_backup",
              "properties": {
                "addressPrefix": "52.175.156.251/32",
                "nextHopType": "Internet"
              }
            },
            {
              "name": "SqlManagement_automation_primary",
              "properties": {
                "addressPrefix": "52.228.84.112/28",
                "nextHopType": "Internet"
              }
            }
          ]
        },
        "CentralUS": {
          "controlPlane": [
            {
              "name": "SqlManagement_controlPlane_primary",
              "properties": {
                "addressPrefix": "23.99.160.139/32",
                "nextHopType": "Internet"
              }
            },
            {
              "name": "SqlManagement_controlPlane_backup1",
              "properties": {
                "addressPrefix": "13.67.215.62/32",
                "nextHopType": "Internet"
              }
            },
            {
              "name": "SqlManagement_controlPlane_backup2",
              "properties": {
                "addressPrefix": "52.182.137.15/32",
                "nextHopType": "Internet"
              }
            }
          ],
          "controlPlane_SqlManagementTag": [
            {
              "name": "SqlManagement_controlPlane_az01",
              "properties": {
                "addressPrefix": "104.208.16.96/27",
                "nextHopType": "Internet"
              }
            },
            {
              "name": "SqlManagement_controlPlane_az02",
              "properties": {
                "addressPrefix": "52.182.138.224/27",
                "nextHopType": "Internet"
              }
            },
            {
              "name": "SqlManagement_controlPlane_az03",
              "properties": {
                "addressPrefix": "13.89.170.224/27",
                "nextHopType": "Internet"
              }
            }
          ],
          "runners": [
            {
              "name": "SqlManagement_automation_backup",
              "properties": {
                "addressPrefix": "40.70.72.228/32",
                "nextHopType": "Internet"
              }
            },
            {
              "name": "SqlManagement_automation_primary",
              "properties": {
                "addressPrefix": "52.165.237.178/32",
                "nextHopType": "Internet"
              }
            }
          ],
          "DSMS": [
            {
              "name": "SqlManagement_security_primary",
              "properties": {
                "addressPrefix": "40.113.223.225/32",
                "nextHopType": "Internet"
              }
            },
            {
              "name": "SqlManagement_security_backup",
              "properties": {
                "addressPrefix": "40.122.151.225/32",
                "nextHopType": "Internet"
              }
            }
          ]
        },
        "EastUS": {
          "controlPlane": [
            {
              "name": "SqlManagement_controlPlane_primary",
              "properties": {
                "addressPrefix": "191.238.6.43/32",
                "nextHopType": "Internet"
              }
            },
            {
              "name": "SqlManagement_controlPlane_backup1",
              "properties": {
                "addressPrefix": "40.121.158.30/32",
                "nextHopType": "Internet"
              }
            },
            {
              "name": "SqlManagement_controlPlane_backup2",
              "properties": {
                "addressPrefix": "40.79.153.12/32",
                "nextHopType": "Internet"
              }
            }
          ],
          "controlPlane_SqlManagementTag": [
            {
              "name": "SqlManagement_controlPlane_az01",
              "properties": {
                "addressPrefix": "40.71.10.224/27",
                "nextHopType": "Internet"
              }
            },
            {
              "name": "SqlManagement_controlPlane_az02",
              "properties": {
                "addressPrefix": "40.78.226.224/27",
                "nextHopType": "Internet"
              }
            },
            {
              "name": "SqlManagement_controlPlane_az03",
              "properties": {
                "addressPrefix": "40.79.154.0/27",
                "nextHopType": "Internet"
              }
            },
            {
              "name": "SqlManagement_controlPlane_az04",
              "properties": {
                "addressPrefix": "40.79.154.224/27",
                "nextHopType": "Internet"
              }
            }
          ],
          "runners": [
            {
              "name": "SqlManagement_automation_backup",
              "properties": {
                "addressPrefix": "13.64.155.40/32",
                "nextHopType": "Internet"
              }
            },
            {
              "name": "SqlManagement_automation_primary",
              "properties": {
                "addressPrefix": "40.71.215.148/32",
                "nextHopType": "Internet"
              }
            }
          ],
          "DSMS": [
            {
              "name": "SqlManagement_security_primary",
              "properties": {
                "addressPrefix": "23.96.103.225/32",
                "nextHopType": "Internet"
              }
            },
            {
              "name": "SqlManagement_security_backup",
              "properties": {
                "addressPrefix": "52.170.92.194/32",
                "nextHopType": "Internet"
              }
            }
          ]
        },
        "EastUS2": {
          "controlPlane": [
            {
              "name": "SqlManagement_controlPlane_primary",
              "properties": {
                "addressPrefix": "191.239.224.107/32",
                "nextHopType": "Internet"
              }
            },
            {
              "name": "SqlManagement_controlPlane_backup1",
              "properties": {
                "addressPrefix": "40.79.84.180/32",
                "nextHopType": "Internet"
              }
            },
            {
              "name": "SqlManagement_controlPlane_backup2",
              "properties": {
                "addressPrefix": "52.177.185.181/32",
                "nextHopType": "Internet"
              }
            },
            {
              "name": "SqlManagement_controlPlane_backup3",
              "properties": {
                "addressPrefix": "52.167.104.0/26",
                "nextHopType": "Internet"
              }
            }
          ],
          "controlPlane_SqlManagementTag": [
            {
              "name": "SqlManagement_controlPlane_az01",
              "properties": {
                "addressPrefix": "104.208.144.96/27",
                "nextHopType": "Internet"
              }
            },
            {
              "name": "SqlManagement_controlPlane_az02",
              "properties": {
                "addressPrefix": "52.167.106.96/27",
                "nextHopType": "Internet"
              }
            },
            {
              "name": "SqlManagement_controlPlane_az03",
              "properties": {
                "addressPrefix": "40.70.146.96/27",
                "nextHopType": "Internet"
              }
            }
          ],
          "runners": [
            {
              "name": "SqlManagement_automation_backup",
              "properties": {
                "addressPrefix": "52.173.243.204/32",
                "nextHopType": "Internet"
              }
            },
            {
              "name": "SqlManagement_automation_primary",
              "properties": {
                "addressPrefix": "52.225.130.171/32",
                "nextHopType": "Internet"
              }
            }
          ],
          "DSMS": [
            {
              "name": "SqlManagement_security_primary",
              "properties": {
                "addressPrefix": "191.236.199.225/32",
                "nextHopType": "Internet"
              }
            },
            {
              "name": "SqlManagement_security_backup",
              "properties": {
                "addressPrefix": "104.209.149.14/32",
                "nextHopType": "Internet"
              }
            }
          ]
        },
        "NorthCentralUS": {
          "controlPlane": [
            {
              "name": "SqlManagement_controlPlane_primary",
              "properties": {
                "addressPrefix": "23.98.55.75/32",
                "nextHopType": "Internet"
              }
            },
            {
              "name": "SqlManagement_controlPlane_backup1",
              "properties": {
                "addressPrefix": "23.96.178.199/32",
                "nextHopType": "Internet"
              }
            }
          ],
          "controlPlane_SqlManagementTag": [
            {
              "name": "SqlManagement_controlPlane_az00",
              "properties": {
                "addressPrefix": "52.162.107.128/27",
                "nextHopType": "Internet"
              }
            }
          ],
          "runners": [
            {
              "name": "SqlManagement_automation_backup",
              "properties": {
                "addressPrefix": "40.74.254.227/32",
                "nextHopType": "Internet"
              }
            },
            {
              "name": "SqlManagement_automation_primary",
              "properties": {
                "addressPrefix": "23.96.185.63/32",
                "nextHopType": "Internet"
              }
            }
          ],
          "DSMS": [
            {
              "name": "SqlManagement_security_primary",
              "properties": {
                "addressPrefix": "65.52.59.57/32",
                "nextHopType": "Internet"
              }
            },
            {
              "name": "SqlManagement_security_backup",
              "properties": {
                "addressPrefix": "168.62.244.242/32",
                "nextHopType": "Internet"
              }
            }
          ]
        },
        "SouthCentralUS": {
          "controlPlane": [
            {
              "name": "SqlManagement_controlPlane_primary",
              "properties": {
                "addressPrefix": "23.98.162.75/32",
                "nextHopType": "Internet"
              }
            },
            {
              "name": "SqlManagement_controlPlane_backup1",
              "properties": {
                "addressPrefix": "13.66.62.124/32",
                "nextHopType": "Internet"
              }
            }
          ],
          "controlPlane_SqlManagementTag": [
            {
              "name": "SqlManagement_controlPlane_az01",
              "properties": {
                "addressPrefix": "104.214.19.0/27",
                "nextHopType": "Internet"
              }
            }
          ],
          "runners": [
            {
              "name": "SqlManagement_automation_backup",
              "properties": {
                "addressPrefix": "23.96.243.93/32",
                "nextHopType": "Internet"
              }
            },
            {
              "name": "SqlManagement_automation_primary",
              "properties": {
                "addressPrefix": "13.84.52.76/32",
                "nextHopType": "Internet"
              }
            }
          ],
          "DSMS": [
            {
              "name": "SqlManagement_security_primary",
              "properties": {
                "addressPrefix": "104.215.79.225/32",
                "nextHopType": "Internet"
              }
            },
            {
              "name": "SqlManagement_security_backup",
              "properties": {
                "addressPrefix": "23.102.135.225/32",
                "nextHopType": "Internet"
              }
            }
          ]
        },
        "CentralUSeuap": {
          "controlPlane": [
            {
              "name": "SqlManagement_controlPlane_primary",
              "properties": {
                "addressPrefix": "52.180.176.154/32",
                "nextHopType": "Internet"
              }
            }
          ],
          "controlPlane_SqlManagementTag": [
            {
              "name": "SqlManagement_controlPlane_az00",
              "properties": {
                "addressPrefix": "40.78.203.128/27",
                "nextHopType": "Internet"
              }
            }
          ],
          "runners": [
            {
              "name": "SqlManagement_automation_backup",
              "properties": {
                "addressPrefix": "40.70.72.228/32",
                "nextHopType": "Internet"
              }
            },
            {
              "name": "SqlManagement_automation_primary",
              "properties": {
                "addressPrefix": "40.69.161.215/32",
                "nextHopType": "Internet"
              }
            }
          ],
          "DSMS": [
            {
              "name": "SqlManagement_security_primary",
              "properties": {
                "addressPrefix": "52.180.179.200/32",
                "nextHopType": "Internet"
              }
            },
            {
              "name": "SqlManagement_security_backup",
              "properties": {
                "addressPrefix": "52.180.179.241/32",
                "nextHopType": "Internet"
              }
            }
          ]
        },
        "EastUS2euap": {
          "controlPlane": [
            {
              "name": "SqlManagement_controlPlane_primary",
              "properties": {
                "addressPrefix": "52.225.188.46/32",
                "nextHopType": "Internet"
              }
            },
            {
              "name": "SqlManagement_controlPlane_backup1",
              "properties": {
                "addressPrefix": "52.138.89.3/32",
                "nextHopType": "Internet"
              }
            }
          ],
          "controlPlane_SqlManagementTag": [
            {
              "name": "SqlManagement_controlPlane_az01",
              "properties": {
                "addressPrefix": "40.75.34.64/27",
                "nextHopType": "Internet"
              }
            },
            {
              "name": "SqlManagement_controlPlane_az02",
              "properties": {
                "addressPrefix": "40.74.147.0/27",
                "nextHopType": "Internet"
              }
            },
            {
              "name": "SqlManagement_controlPlane_az03",
              "properties": {
                "addressPrefix": "52.138.90.96/27",
                "nextHopType": "Internet"
              }
            }
          ],
          "runners": [
            {
              "name": "SqlManagement_automation_backup",
              "properties": {
                "addressPrefix": "52.173.243.204/32",
                "nextHopType": "Internet"
              }
            },
            {
              "name": "SqlManagement_automation_primary",
              "properties": {
                "addressPrefix": "40.79.32.162/32",
                "nextHopType": "Internet"
              }
            }
          ],
          "DSMS": [
            {
              "name": "SqlManagement_security_primary",
              "properties": {
                "addressPrefix": "52.225.186.89/32",
                "nextHopType": "Internet"
              }
            },
            {
              "name": "SqlManagement_security_backup",
              "properties": {
                "addressPrefix": "52.225.191.250/32",
                "nextHopType": "Internet"
              }
            }
          ]
        },
        "WestCentralUS": {
          "controlPlane": [
            {
              "name": "SqlManagement_controlPlane_primary",
              "properties": {
                "addressPrefix": "13.78.145.25/32",
                "nextHopType": "Internet"
              }
            },
            {
              "name": "SqlManagement_controlPlane_backup1",
              "properties": {
                "addressPrefix": "52.161.100.158/32",
                "nextHopType": "Internet"
              }
            }
          ],
          "controlPlane_SqlManagementTag": [
            {
              "name": "SqlManagement_controlPlane_az00",
              "properties": {
                "addressPrefix": "13.71.195.0/27",
                "nextHopType": "Internet"
              }
            }
          ],
          "runners": [
            {
              "name": "SqlManagement_automation_backup",
              "properties": {
                "addressPrefix": "52.183.64.43/32",
                "nextHopType": "Internet"
              }
            },
            {
              "name": "SqlManagement_automation_primary",
              "properties": {
                "addressPrefix": "13.78.182.82/32",
                "nextHopType": "Internet"
              }
            }
          ],
          "DSMS": [
            {
              "name": "SqlManagement_security_primary",
              "properties": {
                "addressPrefix": "52.161.24.60/32",
                "nextHopType": "Internet"
              }
            },
            {
              "name": "SqlManagement_security_backup",
              "properties": {
                "addressPrefix": "40.77.22.227/32",
                "nextHopType": "Internet"
              }
            }
          ]
        },
        "WestUS": {
          "controlPlane": [
            {
              "name": "SqlManagement_controlPlane_primary",
              "properties": {
                "addressPrefix": "23.99.34.75/32",
                "nextHopType": "Internet"
              }
            },
            {
              "name": "SqlManagement_controlPlane_backup1",
              "properties": {
                "addressPrefix": "104.42.238.205/32",
                "nextHopType": "Internet"
              }
            }
          ],
          "controlPlane_SqlManagementTag": [
            {
              "name": "SqlManagement_controlPlane_az00",
              "properties": {
                "addressPrefix": "40.112.243.128/27",
                "nextHopType": "Internet"
              }
            }
          ],
          "runners": [
            {
              "name": "SqlManagement_automation_backup",
              "properties": {
                "addressPrefix": "13.92.242.41/32",
                "nextHopType": "Internet"
              }
            },
            {
              "name": "SqlManagement_automation_primary",
              "properties": {
                "addressPrefix": "104.42.96.175/32",
                "nextHopType": "Internet"
              }
            }
          ],
          "DSMS": [
            {
              "name": "SqlManagement_security_primary",
              "properties": {
                "addressPrefix": "104.42.23.250/32",
                "nextHopType": "Internet"
              }
            },
            {
              "name": "SqlManagement_security_backup",
              "properties": {
                "addressPrefix": "13.64.66.183/32",
                "nextHopType": "Internet"
              }
            }
          ]
        },
        "WestUS2": {
          "controlPlane": [
            {
              "name": "SqlManagement_controlPlane_primary",
              "properties": {
                "addressPrefix": "13.66.226.202/32",
                "nextHopType": "Internet"
              }
            }
          ],
          "controlPlane_SqlManagementTag": [
            {
              "name": "SqlManagement_controlPlane_az01",
              "properties": {
                "addressPrefix": "13.66.140.96/27",
                "nextHopType": "Internet"
              }
            },
            {
              "name": "SqlManagement_controlPlane_az02",
              "properties": {
                "addressPrefix": "40.78.242.192/27",
                "nextHopType": "Internet"
              }
            },
            {
              "name": "SqlManagement_controlPlane_az03",
              "properties": {
                "addressPrefix": "40.78.250.128/27",
                "nextHopType": "Internet"
              }
            }
          ],
          "runners": [
            {
              "name": "SqlManagement_automation_backup",
              "properties": {
                "addressPrefix": "13.78.181.246/32",
                "nextHopType": "Internet"
              }
            },
            {
              "name": "SqlManagement_automation_primary",
              "properties": {
                "addressPrefix": "40.65.124.161/32",
                "nextHopType": "Internet"
              }
            }
          ],
          "DSMS": [
            {
              "name": "SqlManagement_security_primary",
              "properties": {
                "addressPrefix": "13.66.230.240/32",
                "nextHopType": "Internet"
              }
            },
            {
              "name": "SqlManagement_security_backup",
              "properties": {
                "addressPrefix": "104.40.19.34/32",
                "nextHopType": "Internet"
              }
            }
          ]
        },
        "routesUnion": "[if(contains(variables('locations'), tolower(parameters('location'))), union(variables('routesJumpboxes'), variables('routesSAW'), variables('routesRunners'), variables('routesDSMS'), variables(parameters('location')).controlPlane, variables(parameters('location')).controlPlane_SqlManagementTag, variables(parameters('location')).runners, variables(parameters('location')).DSMS), union(variables('routesJumpboxes'), variables('routesSAW'), variables('routesRunners')))]",
        "defaultNSGs": [
          {
            "name": "allow_tds_inbound",
            "properties": {
              "description": "Allow access to data",
              "protocol": "Tcp",
              "sourcePortRange": "*",
              "destinationPortRange": "1433",
              "sourceAddressPrefix": "VirtualNetwork",
              "destinationAddressPrefix": "[variables('sqlmiSubnetPrefix')]",
              "access": "Allow",
              "priority": 1000,
              "direction": "Inbound"
            }
          },
          {
            "name": "allow_redirect_inbound",
            "properties": {
              "description": "Allow inbound redirect traffic to Managed Instance inside the virtual network",
              "protocol": "Tcp",
              "sourcePortRange": "*",
              "destinationPortRange": "11000-11999",
              "sourceAddressPrefix": "VirtualNetwork",
              "destinationAddressPrefix": "[variables('sqlmiSubnetPrefix')]",
              "access": "Allow",
              "priority": 1100,
              "direction": "Inbound"
            }
          },
          {
            "name": "allow_geodr_inbound",
            "properties": {
              "description": "Allow inbound geodr traffic inside the virtual network",
              "protocol": "Tcp",
              "sourcePortRange": "*",
              "destinationPortRange": "5022",
              "sourceAddressPrefix": "VirtualNetwork",
              "destinationAddressPrefix": "[variables('sqlmiSubnetPrefix')]",
              "access": "Allow",
              "priority": 1200,
              "direction": "Inbound"
            }
          },
          {
            "name": "deny_all_inbound",
            "properties": {
              "description": "Deny all other inbound traffic",
              "protocol": "*",
              "sourcePortRange": "*",
              "destinationPortRange": "*",
              "sourceAddressPrefix": "*",
              "destinationAddressPrefix": "*",
              "access": "Deny",
              "priority": 4096,
              "direction": "Inbound"
            }
          },
          {
            "name": "allow_linkedserver_outbound",
            "properties": {
              "description": "Allow outbound linkedserver traffic inside the virtual network",
              "protocol": "Tcp",
              "sourcePortRange": "*",
              "destinationPortRange": "1433",
              "sourceAddressPrefix": "[variables('sqlmiSubnetPrefix')]",
              "destinationAddressPrefix": "VirtualNetwork",
              "access": "Allow",
              "priority": 1000,
              "direction": "Outbound"
            }
          },
          {
            "name": "allow_redirect_outbound",
            "properties": {
              "description": "Allow outbound redirect traffic to Managed Instance inside the virtual network",
              "protocol": "Tcp",
              "sourcePortRange": "*",
              "destinationPortRange": "11000-11999",
              "sourceAddressPrefix": "[variables('sqlmiSubnetPrefix')]",
              "destinationAddressPrefix": "VirtualNetwork",
              "access": "Allow",
              "priority": 1100,
              "direction": "Outbound"
            }
          },
          {
            "name": "allow_geodr_outbound",
            "properties": {
              "description": "Allow outbound geodr traffic inside the virtual network",
              "protocol": "Tcp",
              "sourcePortRange": "*",
              "destinationPortRange": "5022",
              "sourceAddressPrefix": "[variables('sqlmiSubnetPrefix')]",
              "destinationAddressPrefix": "VirtualNetwork",
              "access": "Allow",
              "priority": 1200,
              "direction": "Outbound"
            }
          },
          {
            "name": "deny_all_outbound",
            "properties": {
              "description": "Deny all other outbound traffic",
              "protocol": "*",
              "sourcePortRange": "*",
              "destinationPortRange": "*",
              "sourceAddressPrefix": "*",
              "destinationAddressPrefix": "*",
              "access": "Deny",
              "priority": 4096,
              "direction": "Outbound"
            }
          }
        ],
        "allowFromInternetTo3342NSG": [
          {
            "name": "public_endpoint_inbound",
            "properties": {
              "description": "Allow inbound traffic to Managed Instance through public endpoint",
              "protocol": "Tcp",
              "sourcePortRange": "*",
              "destinationPortRange": "3342",
              "sourceAddressPrefix": "Internet",
              "destinationAddressPrefix": "*",
              "access": "Allow",
              "priority": 1300,
              "direction": "Inbound"
            }
          }
        ],
        "allowFromAzureCloudTo3342NSG": [
          {
            "name": "public_endpoint_inbound",
            "properties": {
              "description": "Allow inbound traffic to Managed Instance through public endpoint",
              "protocol": "Tcp",
              "sourcePortRange": "*",
              "destinationPortRange": "3342",
              "sourceAddressPrefix": "AzureCloud",
              "destinationAddressPrefix": "*",
              "access": "Allow",
              "priority": 1300,
              "direction": "Inbound"
            }
          }
        ],
        "disallowTrafficTo3342NSG": [
          {
            "name": "public_endpoint_inbound",
            "properties": {
              "description": "Deny inbound traffic to Managed Instance through public endpoint",
              "protocol": "*",
              "sourcePortRange": "*",
              "destinationPortRange": "3342",
              "sourceAddressPrefix": "*",
              "destinationAddressPrefix": "*",
              "access": "Deny",
              "priority": 1300,
              "direction": "Inbound"
            }
          }
        ],
        "unionNSGs": "[if(and(parameters('publicDataEndpointEnabled'), not(empty(parameters('nsgForPublicEndpoint')))), union(variables('defaultNSGs'), variables(parameters('nsgForPublicEndpoint'))), variables('defaultNSGs'))]"
      },
      "resources": [
        {
          "apiVersion": "2017-10-01",
          "type": "Microsoft.Network/networkSecurityGroups",
          "name": "[variables('networkSecurityGroupName')]",
          "location": "[parameters('location')]",
          "properties": {
            "copy": [
              {
                "name": "securityRules",
                "count": "[length(variables('unionNSGs'))]",
                "input": {
                  "name": "[variables('unionNSGs')[copyIndex('securityRules')].name]",
                  "properties": "[variables('unionNSGs')[copyIndex('securityRules')].properties]"
                }
              }
            ]
          }
        },
        {
          "type": "Microsoft.Network/routeTables",
          "name": "[variables('routeTableName')]",
          "apiVersion": "2018-02-01",
          "location": "[parameters('location')]",
          "properties": {
            "disableBgpRoutePropagation": false,
            "copy": [
              {
                "name": "routes",
                "count": "[length(variables('routesUnion'))]",
                "input": {
                  "name": "[concat('SqlManagement_', copyIndex('routes'))]",
                  "properties": "[variables('routesUnion')[copyIndex('routes')].properties]"
                }
              }
            ]
          }
        },
        {
          "name": "[variables('virtualNetworkName')]",
          "type": "Microsoft.Network/virtualNetworks",
          "apiVersion": "2018-04-01",
          "dependsOn": [
            "[variables('routeTableName')]",
            "[variables('networkSecurityGroupName')]"
          ],
          "location": "[parameters('location')]",
          "properties": {
            "addressSpace": {
              "addressPrefixes": [
                "[variables('addressPrefix')]"
              ]
            },
            "subnets": [
              {
                "name": "[variables('sqlmiSubnetName')]",
                "properties": {
                  "addressPrefix": "[variables('sqlmiSubnetPrefix')]",
                  "routeTable": {
                    "id": "[resourceId('Microsoft.Network/routeTables', variables('routeTableName'))]"
                  },
                  "networkSecurityGroup": {
                    "id": "[resourceId('Microsoft.Network/networkSecurityGroups', variables('networkSecurityGroupName'))]"
                  },
                  "delegations": [
                    {
                      "name": "[concat('dlg-', variables('deployment-prefix'))]",
                      "properties": {
                        "serviceName": "Microsoft.Sql/managedInstances"
                      }
                    }
                  ]
                }
              }
            ]
          }
        }
      ]
    },
    "resourceGroup": "NETWORK-RG",
    "parameters": {
      "orgTag": {
        "value": "[parameters('orgTag')]"
      },
      "suffix": {
        "value": "[parameters('suffix')]"
      },
      "location": {
        "value": "[parameters('location')]"
      },
      "publicDataEndpointEnabled": {
        "value": false
      },
      "nsgForPublicEndpoint": {
        "value": "allowFromAzureCloudTo3342NSG"
      },
      "ApplicationName": {
        "value": "[parameters('ApplicationName')]"
      },
      "Approver": {
        "value": "[parameters('Approver')]"
      },
      "BudgetAmount": {
        "value": "[parameters('BudgetAmount')]"
      },
      "BusinessUnit": {
        "value": "[parameters('BusinessUnit')]"
      },
      "CostCenter": {
        "value": "[parameters('CostCenter')]"
      },
      "DR": {
        "value": "[parameters('DR')]"
      },
      "EndDate": {
        "value": "[parameters('EndDate')]"
      },
      "Env": {
        "value": "[parameters('Env')]"
      },
      "Owner": {
        "value": "[parameters('Owner')]"
      },
      "Requester": {
        "value": "[parameters('Requester')]"
      },
      "ServiceClass": {
        "value": "[parameters('ServiceClass')]"
      },
      "StartDate": {
        "value": "[parameters('StartDate')]"
      }
    }
  }
}
